App Mesh/Default.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: skills
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      serviceAccountName: proxy-serviceaccount
      containers: 
        - name: nginx
          image: nginx
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-deployment
  namespace: skills
  labels:
    app: httpd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      serviceAccountName: proxy-serviceaccount
      containers:
        - name: httpd
          image: httpd
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: nskills-svc
  namespace: skills
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: askills-svc
  namespace: skills
spec:
  type: NodePort
  selector:
    app: httpd
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skills-ingress
  namespace: skills
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /nginx
            backend:
              service:
                name: web-static-ingress-gw
                port:
                  number: 80

    - http:
        paths:
          - pathType: Prefix
            path: /httpd
            backend:
              service:
                name: web-static-ingress-gw
                port:
                  number: 80

    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: web-static-ingress-gw
                port:
                  number: 80
---
